--- a/index.html
+++ b/index.html
@@ -6,286 +6,323 @@
 <title>NordKredit</title>
 
 <style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:Arial, sans-serif;}
+
 body{
-margin:0;
-font-family:Arial, sans-serif;
-background:linear-gradient(135deg,#0f3c78,#0a1f44);
+height:100vh;
 display:flex;
 justify-content:center;
 align-items:center;
-height:100vh;
 overflow:hidden;
+background:#0b1e3a;
+position:relative;
 }
 
-/* Premium arxa işıq */
+/* BACKGROUND IMAGES */
 body::before{
 content:"";
 position:absolute;
-width:600px;
-height:600px;
-background:radial-gradient(circle,rgba(0,150,255,0.4),transparent 70%);
-animation:moveLight 8s infinite alternate;
+inset:0;
+background:url("money.png") left center/contain no-repeat;
+opacity:0.25;
 }
-@keyframes moveLight{
-from{transform:translate(-100px,-100px);}
-to{transform:translate(100px,100px);}
+body::after{
+content:"";
+position:absolute;
+inset:0;
+background:url("logo.png") right center/contain no-repeat;
+opacity:0.25;
 }
 
-/* Telefon */
+/* PHONE */
 .phone{
-width:340px;
-height:680px;
-background:#111;
-border-radius:40px;
+width:360px;
+height:720px;
+background:#0e1f3f;
+border-radius:45px;
 padding:20px;
-box-shadow:0 0 40px rgba(0,0,0,0.7);
 position:relative;
+box-shadow:0 0 80px rgba(0,0,0,0.9);
 }
 
-/* Kart */
-.card-container{
+/* top notch */
+.phone::before{
+content:"";
+position:absolute;
+top:0;
+left:50%;
+transform:translateX(-50%);
+width:160px;
+height:35px;
+background:black;
+border-bottom-left-radius:20px;
+border-bottom-right-radius:20px;
+}
+
+/* bottom sensor line */
+.phone::after{
+content:"";
+position:absolute;
+bottom:8px;
+left:50%;
+transform:translateX(-50%);
+width:120px;
+height:5px;
+background:#444;
+border-radius:5px;
+}
+
+/* side buttons */
+.side-btn{
+position:absolute;
+width:4px;
+height:80px;
+background:#111;
+right:-4px;
+top:200px;
+border-radius:5px;
+}
+.side-btn2{
+position:absolute;
+width:4px;
+height:50px;
+background:#111;
+left:-4px;
+top:230px;
+border-radius:5px;
+}
+
+/* CARD */
+.card-wrapper{
 perspective:1000px;
-margin-bottom:20px;
+margin-top:80px;
 }
 .card{
 width:100%;
-height:200px;
-border-radius:15px;
+height:210px;
 position:relative;
 transform-style:preserve-3d;
-transition:transform 0.8s;
+transition:0.8s;
 }
 .card.flip{
 transform:rotateY(180deg);
 }
-.card-front, .card-back{
+.card-face{
 position:absolute;
 width:100%;
 height:100%;
 backface-visibility:hidden;
-border-radius:15px;
+border-radius:20px;
+color:white;
 padding:20px;
-box-sizing:border-box;
 }
 
-/* Ön hissə */
-.card-front{
-background:radial-gradient(circle at center,#1fa34a,#0c5f2c);
-color:white;
+/* FRONT DESIGN */
+.front{
+background:radial-gradient(circle at center,#1bb34a,#0c5f2b 70%);
+box-shadow:0 15px 30px rgba(0,0,0,0.6);
 }
 
-/* Arxa hissə */
-.card-back{
-background:linear-gradient(135deg,#0a0a0a,#1c1c1c);
-transform:rotateY(180deg);
-color:white;
-}
-
-/* Bank adı */
-.bank{
-font-size:20px;
-font-weight:bold;
-}
-
-/* Çip */
+/* CHIP */
 .chip{
 width:50px;
 height:35px;
-background:linear-gradient(135deg,#d4af37,#a67c00);
+background:linear-gradient(45deg,#ccc,#999);
 border-radius:6px;
-margin-top:10px;
 }
 
-/* Kart nömrəsi */
+/* LOGO */
+.logo{
+position:absolute;
+top:15px;
+left:20px;
+font-weight:bold;
+font-size:18px;
+}
+
+/* CARD NUMBER */
 .number{
 position:absolute;
-top:95px;
-width:100%;
-text-align:center;
-font-size:20px;
+top:50%;
+left:50%;
+transform:translate(-50%,-50%);
+font-size:22px;
 letter-spacing:3px;
 }
 
-/* MMYY */
+/* EXP */
 .exp{
 position:absolute;
 bottom:20px;
 left:20px;
+font-size:14px;
 }
 
-/* Mastercard */
-.master{
+/* MASTERCARD */
+.mastercard{
 position:absolute;
 bottom:15px;
 right:20px;
 width:50px;
 height:30px;
 }
-.master::before{
-content:"";
+.mastercard div{
 position:absolute;
 width:30px;
 height:30px;
-background:red;
 border-radius:50%;
-left:0;
 }
-.master::after{
-content:"";
-position:absolute;
-width:30px;
-height:30px;
-background:orange;
-border-radius:50%;
-left:20px;
-opacity:0.9;
-}
+.mastercard .r{background:#EB001B;left:0;}
+.mastercard .y{background:#F79E1B;left:15px;mix-blend-mode:screen;}
 
-/* CVV arxa */
-.cvv-strip{
-background:#fff;
+/* BACK */
+.back{
+background:#111;
+transform:rotateY(180deg);
+}
+.strip{
 height:40px;
-margin-top:50px;
-border-radius:5px;
+background:black;
+margin-top:20px;
+}
+.cvv-box{
+margin-top:30px;
+background:white;
 color:black;
-display:flex;
-justify-content:flex-end;
-align-items:center;
-padding-right:10px;
+padding:10px;
+text-align:right;
+border-radius:5px;
 }
 
-/* Input */
+/* FORM */
+form{
+margin-top:40px;
+display:flex;
+flex-direction:column;
+gap:12px;
+}
 input{
-width:100%;
-padding:10px;
-margin:10px 0;
-border-radius:8px;
+padding:12px;
 border:none;
+border-radius:8px;
 font-size:16px;
 }
-
-/* Button */
 button{
-width:100%;
-padding:12px;
-background:#0f62fe;
-color:white;
+padding:14px;
 border:none;
 border-radius:10px;
-font-size:16px;
+background:linear-gradient(90deg,#f6d365,#fda085);
+font-weight:bold;
 cursor:pointer;
 }
 
-/* Loading */
+/* LOADING */
 .loading{
 position:absolute;
-top:0;
-left:0;
-width:100%;
-height:100%;
+inset:0;
 background:rgba(0,0,0,0.8);
-display:flex;
+backdrop-filter:blur(8px);
+display:none;
+flex-direction:column;
 justify-content:center;
 align-items:center;
-flex-direction:column;
 color:white;
 font-size:18px;
-display:none;
 }
-
 .spinner{
-border:5px solid #ccc;
-border-top:5px solid #0f62fe;
+width:50px;
+height:50px;
+border:5px solid #555;
+border-top:5px solid gold;
 border-radius:50%;
-width:40px;
-height:40px;
 animation:spin 1s linear infinite;
-margin-bottom:15px;
+margin-bottom:20px;
 }
 @keyframes spin{
-100%{transform:rotate(360deg);}
+0%{transform:rotate(0)}
+100%{transform:rotate(360deg)}
 }
 </style>
 </head>
-
 <body>
 
 <div class="phone">
+<div class="side-btn"></div>
+<div class="side-btn2"></div>
 
-<div class="card-container">
+<div class="card-wrapper">
 <div class="card" id="card">
 
-<div class="card-front">
-<div class="bank">NordKredit</div>
+<div class="card-face front">
+<div class="logo">NordKredit</div>
 <div class="chip"></div>
 <div class="number" id="cardNumber">0000 0000 0000 0000</div>
 <div class="exp" id="cardExp">MM/YY</div>
-<div class="master"></div>
-</div>
-
-<div class="card-back">
-<div style="height:40px;background:black;margin-top:20px;"></div>
-<div class="cvv-strip" id="cardCVV">***</div>
-</div>
-
+<div class="mastercard">
+<div class="r"></div>
+<div class="y"></div>
 </div>
 </div>
 
-<input type="text" id="numberInput" placeholder="Kart nömrəsi" maxlength="19">
-<input type="text" id="expInput" placeholder="MM/YY" maxlength="5">
-<input type="text" id="cvvInput" placeholder="CVV" maxlength="3">
+<div class="card-face back">
+<div class="strip"></div>
+<div class="cvv-box" id="cvvDisplay">***</div>
+</div>
 
-<button onclick="submitForm()">Təsdiqlə</button>
+</div>
+</div>
+
+<form id="form">
+<input type="text" maxlength="19" placeholder="Kart nömrəsi" id="numberInput">
+<input type="text" maxlength="5" placeholder="MM/YY" id="expInput">
+<input type="text" maxlength="3" placeholder="CVV" id="cvvInput">
+<button type="submit">Təsdiqlə</button>
+</form>
 
 <div class="loading" id="loading">
 <div class="spinner"></div>
-Loading...
+<div id="loadingText">Loading...</div>
 </div>
 
 </div>
 
 <script>
-const card=document.getElementById("card");
 const numberInput=document.getElementById("numberInput");
 const expInput=document.getElementById("expInput");
 const cvvInput=document.getElementById("cvvInput");
-
-numberInput.addEventListener("input",()=>{
-let value=numberInput.value.replace(/\D/g,"").substring(0,16);
-value=value.replace(/(.{4})/g,"$1 ").trim();
-document.getElementById("cardNumber").innerText=value || "0000 0000 0000 0000";
-});
-
-expInput.addEventListener("input",()=>{
-document.getElementById("cardExp").innerText=expInput.value || "MM/YY";
-});
-
-cvvInput.addEventListener("focus",()=>{
-card.classList.add("flip");
-});
-
-cvvInput.addEventListener("blur",()=>{
-card.classList.remove("flip");
-});
-
-cvvInput.addEventListener("input",()=>{
-let val=cvvInput.value.replace(/\D/g,"").substring(0,3);
-cvvInput.value=val;
-
-document.getElementById("cardCVV").innerText=val;
-setTimeout(()=>{
-document.getElementById("cardCVV").innerText="*".repeat(val.length);
-},500);
-});
-
-function submitForm(){
+const cardNumber=document.getElementById("cardNumber");
+const cardExp=document.getElementById("cardExp");
+const cvvDisplay=document.getElementById("cvvDisplay");
+const card=document.getElementById("card");
 const loading=document.getElementById("loading");
-loading.style.display="flex";
+const loadingText=document.getElementById("loadingText");
 
+numberInput.addEventListener("input",e=>{
+let val=e.target.value.replace(/\D/g,'').substring(0,16);
+val=val.replace(/(.{4})/g,'$1 ').trim();
+cardNumber.textContent=val||"0000 0000 0000 0000";
+});
+
+expInput.addEventListener("input",e=>{
+cardExp.textContent=e.target.value||"MM/YY";
+});
+
+cvvInput.addEventListener("focus",()=>card.classList.add("flip"));
+cvvInput.addEventListener("blur",()=>card.classList.remove("flip"));
+
+cvvInput.addEventListener("input",e=>{
+let val=e.target.value.substring(0,3);
+cvvDisplay.textContent=val;
+setTimeout(()=>cvvDisplay.textContent="***",1000);
+});
+
+form.addEventListener("submit",e=>{
+e.preventDefault();
+loading.style.display="flex";
 setTimeout(()=>{
-loading.innerHTML="Təbriklər Sorğunuz Təsdiq Olundu";
+loadingText.textContent="Təbriklər Sorğunuz Təsdiq Olundu";
 },6000);
-}
+});
 </script>
 
 </body>
